# kidgamemaker

./: .gitignore  README.md  kidgamemaker_gemini_cleanup_plan.md  kidgamemaker_phase1_contract_runner.patch
.github/workflows/: ci.yml
_Inbox/: .gitkeep
docs/: ARCHITECTURE.md  CODEX_NEXT_PROMPT.md  GEMINI_PLAN_DIGEST.md  GITHUB_SETUP.md  IMPLEMENTATION_ROADMAP_ONE_PERSON.md  JSON_CONTRACTS.md  PHASE1_STATUS.md  codebase_context.md  kidgamemaker_features.agent.final.md  technical_debt_audit.md
docs/research into feature addtions/: app_svelte_customizers.txt  extracted_from_docx.txt  kidgamemaker_features.agent.outline.md  kidgamemaker_features_sec00.md  kidgamemaker_features_sec02.md  kidgamemaker_features_sec03.md  kidgamemaker_features_sec05.md  kidgamemaker_features_sec07.md  kidgamemaker_features_sec08.md  kidgamemaker_features_sec09.md  kidgamemaker_features_sec10.md  main_functions.txt  plan.md  research_from_indie.md  (+1 more)
editor/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: commands.rs  inbox.rs  lib.rs  main.rs  slicer.rs
editor/src-tauri/src/commands/: assets.rs  game.rs  mod.rs  rooms.rs  utils.rs
editor/src-tauri/src/inbox/: dimensions.rs  ingest.rs  mod.rs
engine/: README.md  export_presets.cfg  project.godot
sprite-editor/: README.md
tools/: generate_audio.py  generate_icons.py  ingest_ansimuz_assets.py  slice_existing_sheets.py  validate_json.py
(+4309 files in other folders)
