[package]
name = "kidgamemaker-editor"
version = "0.1.0"
description = "KidGameMaker desktop editor"
authors = ["DocDamage"]
edition = "2021"

[lib]
name = "kidgamemaker_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
png = "0.17"
base64 = "0.21"
zip = "0.6"

